samples/_failures_safe/1761669094_b0b68d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fb69707.c: In function ‘state_machine_step’:
./samples/SAFE/__tmp_2fb69707.c:157:28: error: ‘struct context’ has no member named ‘current’
  157 |                         ctx->current
      |                            ^~
./samples/SAFE/__tmp_2fb69707.c:157:37: error: expected ‘;’ at end of input
  157 |                         ctx->current
      |                                     ^
      |                                     ;
./samples/SAFE/__tmp_2fb69707.c:157:25: error: expected declaration or statement at end of input
  157 |                         ctx->current
      |                         ^~~
./samples/SAFE/__tmp_2fb69707.c:157:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2fb69707.c:157:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2fb69707.c:157:25: error: expected declaration or statement at end of input
